# JogoDasCores

./: CMakeLists.txt  README.md
shaders/: fragment.glsl
src/: main.cpp
